handbook: samba: Remove outdated `security=share` documentation
"share" is no longer a supported setting for the "security" option.
Update our documentation accordingly.

PR:		252893
Reported by:	cm@sdf.org
Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -2534,12 +2534,10 @@ The most important settings in [.filename]#/usr/local/etc/smb4.conf# are the sec
 These directives control the options:
 
 `security`::
-The most common settings are `security = share` and `security = user`.
 If the clients use usernames that are the same as their usernames on the FreeBSD machine, user level security should be used.
-This is the default security policy and it requires clients to first log on before they can access shared resources.
+`security = user` is the default security policy and it requires clients to first log on before they can access shared resources.
 +
-In share level security, clients do not need to log onto the server with a valid username and password before attempting to connect to a shared resource.
-This was the default security model for older versions of Samba.
+Refer to man:smb.conf[5] to learn about other supported settings for the `security` option.
 
 `passdb backend`::
 Samba has several different backend authentication models.
