porters-handbook: Document updates to samba.mk
PR:		280977
Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1845,14 +1845,18 @@ Handle dependency on Samba.
 `build` and `run` will add build-time and run-time dependency on [.filename]#smbd#. `lib` will add a dependency on [.filename]#libsmbclient.so#.
 The variables that are exported are:
 
-`SAMBAPORT`::
+`SAMBA_PORT`::
 The origin of the default Samba port.
 
-`SAMBAINCLUDES`::
+`SAMBA_INCLUDEDIR`::
 The location of the Samba header files.
 
-`SAMBALIBS`::
+`SAMBA_LIBS`::
 The directory where the Samba shared libraries are available.
+
+`SAMBA_LDB_PORT`::
+The origin of the ldb port used by the selected Samba version (e.g., package:databases/ldb28[]).
+It should be used if a port needs to depend on the same ldb version as the selected Samba version.
 
 [[uses-scons]]
 == `scons`
