--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -41,7 +41,7 @@ General discussions about the pending release and known issues should be sent to
 |RC2 builds begin |30 August 2024 |30 August 2024 |Second release candidate.
 |RC3 builds begin |6 September 2024 |6 September 2024 |Third release candidate.
 |RELEASE builds begin |[.line-through]*30 August 2024* +
-13 September 2024 |- |{localRel}-RELEASE builds begin.
+13 September 2024 |13 September 2024 |{localRel}-RELEASE builds begin.
 |RELEASE announcement |[.line-through]*3 September 2024* +
 17 September 2024 |- |{localRel}-RELEASE press release.
 |===
