--- a/website/content/en/releases/13.4R/signatures.adoc
+++ b/website/content/en/releases/13.4R/signatures.adoc
@@ -4,11 +4,11 @@ sidenav: download
 ---
 
 :localRel: 13.4
-:localBranchName: RC3
+:localBranchName: RELEASE
 :localBranchStable: stable/13
 :localBranchReleng: releng/13.4
-:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-13.4-RC3
-:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-13.4-RC3
+:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-13.4-RELEASE
+:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-13.4-RELEASE
 
 = FreeBSD {localRel}-{localBranchName} Release Checksum Signatures
 
