--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -41,10 +41,7 @@ This distribution of FreeBSD {releaseCurrent} is a {releaseType} distribution.
 It can be found at https://www.FreeBSD.org/releases/[] or any of its mirrors.
 More information on obtaining this (or other) {releaseType} distributions of FreeBSD can be found in the link:{handbook}/mirrors[Obtaining FreeBSD appendix] to the link:{handbook}/[FreeBSD Handbook].
 
-All users are encouraged to consult the release errata before installing FreeBSD.
-The errata document is updated with "late-breaking" information discovered late in the release cycle or after the release.
-Typically, it contains information on known bugs, security advisories, and corrections to documentation.
-An up-to-date copy of the errata for FreeBSD {releaseCurrent} can be found on the FreeBSD Web site.
+Please read the link:../errata/[release errata] before installing or upgrading FreeBSD.
 
 This document describes the most user-visible new or changed features in FreeBSD since {releasePrev}.
 In general, changes described here are unique to the {releaseBranch} branch unless specifically marked as MERGED features.
@@ -129,7 +126,8 @@ The man:ice[4] driver has been updated.
 
 Support for SIM7600G has been added to man:u3g[4].
 
-There have been many stability fixes to native and LinuxKPI-based wireless drivers. (Sponsored by The FreeBSD Foundation)
+There have been many stability fixes to native and LinuxKPI-based wireless drivers.
+(Sponsored by The FreeBSD Foundation)
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -189,7 +187,8 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
-References to the legacy `disklabel` utility have been removed in favour of gpart. Future FreeBSD releases will remove this tool entirely."
+References to the legacy `disklabel` utility have been removed in favour of gpart.
+Future FreeBSD releases will remove this tool entirely."
 
 [[ports]]
 == Ports Collection and Package Infrastructure
@@ -199,10 +198,11 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 [[ports-packages]]
 === Packaging Changes
 
-DVD package set has been modernized.
+The DVD package set has been modernized.
+
 package:archivers/unzip[] has been removed as it is in base now.
 
-package:emulators/linux_base-c7[] has been removed as it is unlikely to be useful without other linux packages being installed.
+package:emulators/linux_base-c7[] has been removed as it is unlikely to be useful without other Linux packages being installed.
 
 package:ports-mgmt/portmaster[] has been removed as it has been discouraged in favour of using pkg and binary packages.
 
@@ -210,7 +210,7 @@ package:x11-drivers/xf86-video-vmware[] has been removed as it is no longer usef
 
 package:devel/git[] has been replaced with package:devel/git@lite[] as this is sufficient for most purposes.
 
-package:sysutils/seatd[] and package:x11-wm/sway[] has been added for wayland support.
+package:sysutils/seatd[] and package:x11-wm/sway[] have been added for Wayland support.
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
