--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -188,7 +188,7 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 === Man Pages
 
 References to the legacy `disklabel` utility have been removed in favour of gpart.
-Future FreeBSD releases will remove this tool entirely."
+Future FreeBSD releases will remove this tool entirely.
 
 [[ports]]
 == Ports Collection and Package Infrastructure
