--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -21,7 +21,7 @@ include::shared/en/urls.adoc[]
 
 [.abstract-title]
 The release notes for FreeBSD {releaseCurrent} contain a summary of the changes made to the FreeBSD base system on the {releaseBranch} development line.
-This document lists applicable security advisories that were issued since the last release, as well as significant changes to the FreeBSD kernel and userland.
+This document lists significant changes to the FreeBSD kernel and userland.
 Some brief remarks on upgrading are also presented.
 
 [[intro]]
