--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -48,7 +48,7 @@ In general, changes described here are unique to the {releaseBranch} branch unle
 
 Typical release note items document recent security advisories issued after {releasePrev}, new drivers or hardware support, new commands or options, major bug fixes, or contributed software upgrades.
 They may also list changes to major ports/packages or release engineering practices.
-Clearly the release notes cannot list every single change made to FreeBSD between releases; this document focuses primarily on security advisories, user-visible changes, and major architectural improvements.
+Clearly the release notes cannot list every single change made to FreeBSD between releases; this document focuses primarily on user-visible changes, and major architectural improvements.
 
 [[upgrade]]
 == Upgrading from Previous Releases of FreeBSD
