--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -44,7 +44,7 @@ More information on obtaining this (or other) {releaseType} distributions of Fre
 Please read the link:../errata/[release errata] before installing or upgrading FreeBSD.
 
 This document describes the most user-visible new or changed features in FreeBSD since {releasePrev}.
-In general, changes described here are unique to the {releaseBranch} branch unless specifically marked as MERGED features.
+Note that some of the changes described here are also available in FreeBSD {releasePrev14}.
 
 Typical release note items document recent security advisories issued after {releasePrev}, new drivers or hardware support, new commands or options, major bug fixes, or contributed software upgrades.
 They may also list changes to major ports/packages or release engineering practices.
