doc: Update source files (en .po), for translations

--- a/documentation/content/en/articles/license-guide/_index.po
+++ b/documentation/content/en/articles/license-guide/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-09-09 18:13-0300\n"
+"POT-Creation-Date: 2024-09-14 15:00-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -515,8 +515,9 @@ msgid ""
 "an SPDX-License-Identifier tag and an explicit license.  The explicit "
 "license takes precedence over the SPDX-License-Identifier tag.  The SPDX-"
 "License-Identifier tag is the project's best effort attempt to characterize "
-"the license, but is only informative for automated tools.  See <<expressions,"
-"SPDX-License-Identifier Expressions>> for how to interpret the expression."
+"the license, but is only informative for automated tools.  See crossref:"
+"license-guide[expressions,SPDX-License-Identifier Expressions] for how to "
+"interpret the expression."
 msgstr ""
 
 #. type: Title ===
@@ -530,10 +531,10 @@ msgstr ""
 msgid ""
 "Some files in the tree contain detached licenses.  These files contain only "
 "a copyright notice and an SPDX-License-Identifier expression, but no "
-"explicit license.  See <<expressions,SPDX-License-Identifier Expressions>> "
-"for how to interpret the expression.  Note: the expressions allowed for "
-"detached licenses by the project are a subset of the expressions used "
-"informationally or that are defined by the standard."
+"explicit license.  See crossref:license-guide[expressions,SPDX-License-"
+"Identifier Expressions] for how to interpret the expression.  Note: the "
+"expressions allowed for detached licenses by the project are a subset of the "
+"expressions used informationally or that are defined by the standard."
 msgstr ""
 
 #. type: Plain text
