--- a/documentation/content/en/articles/linux-users/_index.po
+++ b/documentation/content/en/articles/linux-users/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-06-19 21:08-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -173,8 +173,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/linux-users/_index.adoc:96
 msgid ""
-"A complete list of all available ports and packages can be found https://www."
-"freebsd.org/ports/[here]."
+"A complete list of all available ports and packages can be found https://"
+"ports.freebsd.org[here]."
 msgstr ""
 
 #. type: Title ===
