--- a/documentation/content/en/articles/pr-guidelines/_index.po
+++ b/documentation/content/en/articles/pr-guidelines/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 10:28-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -284,27 +284,27 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:125
-msgid "<<pr-unassigned>>"
+msgid "crossref:pr-guidelines[pr-unassigned]"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:126
-msgid "<<pr-assigned>>"
+msgid "crossref:pr-guidelines[pr-assigned]"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:127
-msgid "<<pr-dups>>"
+msgid "crossref:pr-guidelines[pr-dups]"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:128
-msgid "<<pr-stale>>"
+msgid "crossref:pr-guidelines[pr-stale]"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:129
-msgid "<<pr-misfiled-notpr>>"
+msgid "crossref:pr-guidelines[pr-misfiled-notpr]"
 msgstr ""
 
 #. type: Plain text
@@ -1328,8 +1328,8 @@ msgstr ""
 msgid ""
 "If the PR contains sufficient detail, try to reproduce the problem in `-"
 "CURRENT` and `-STABLE`. If you succeed, submit a followup detailing your "
-"findings and try to find someone to assign it to. Set the state to \"analyzed"
-"\" if appropriate."
+"findings and try to find someone to assign it to. Set the state to "
+"\"analyzed\" if appropriate."
 msgstr ""
 
 #. type: Plain text
