--- a/documentation/content/en/articles/releng/_index.po
+++ b/documentation/content/en/articles/releng/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-01-17 20:35-0300\n"
+"POT-Creation-Date: 2024-09-14 15:00-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -193,7 +193,7 @@ msgstr ""
 #. type: Labeled list
 #: documentation/content/en/articles/releng/_index.adoc:108
 #, no-wrap
-msgid "<<release-proc>>"
+msgid "crossref:releng[release-proc]"
 msgstr ""
 
 #. type: Plain text
@@ -206,7 +206,7 @@ msgstr ""
 #. type: Labeled list
 #: documentation/content/en/articles/releng/_index.adoc:111
 #, no-wrap
-msgid "<<release-build>>"
+msgid "crossref:releng[release-build]"
 msgstr ""
 
 #. type: Plain text
@@ -217,7 +217,7 @@ msgstr ""
 #. type: Labeled list
 #: documentation/content/en/articles/releng/_index.adoc:114
 #, no-wrap
-msgid "<<extensibility>>"
+msgid "crossref:releng[extensibility]"
 msgstr ""
 
 #. type: Plain text
@@ -228,7 +228,7 @@ msgstr ""
 #. type: Labeled list
 #: documentation/content/en/articles/releng/_index.adoc:117
 #, no-wrap
-msgid "<<lessons-learned>>"
+msgid "crossref:releng[lessons-learned]"
 msgstr ""
 
 #. type: Plain text
@@ -239,7 +239,7 @@ msgstr ""
 #. type: Labeled list
 #: documentation/content/en/articles/releng/_index.adoc:120
 #, no-wrap
-msgid "<<future>>"
+msgid "crossref:releng[future]"
 msgstr ""
 
 #. type: Plain text
@@ -635,8 +635,8 @@ msgstr ""
 msgid ""
 "Sysinstall should be updated to note the number of available ports and the "
 "amount of disk space required for the Ports Collection.  footnote:[FreeBSD "
-"Ports Collection https://ports.FreeBSD.org] This information is "
-"currently kept in [.filename]#src/usr.sbin/bsdinstall/dist.c#."
+"Ports Collection https://ports.FreeBSD.org] This information is currently "
+"kept in [.filename]#src/usr.sbin/bsdinstall/dist.c#."
 msgstr ""
 
 #. type: Plain text
@@ -882,8 +882,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/releng/_index.adoc:322
 msgid ""
-"The https://ports.FreeBSD.org[FreeBSD Ports collection] is a collection "
-"of over {numports} third-party software packages available for FreeBSD.  The "
+"The https://ports.FreeBSD.org[FreeBSD Ports collection] is a collection of "
+"over {numports} third-party software packages available for FreeBSD.  The "
 "`{portmgr}` is responsible for maintaining a consistent ports tree that can "
 "be used to create the binary packages that accompany official FreeBSD "
 "releases."
