--- a/documentation/content/en/articles/vinum/_index.po
+++ b/documentation/content/en/articles/vinum/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-05-21 14:43-0300\n"
+"POT-Creation-Date: 2024-09-14 15:00-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -171,9 +171,9 @@ msgid ""
 "the disks are not required to have any specific size relationships.  It "
 "works well when the access to the virtual disk is spread evenly about its "
 "address space.  When access is concentrated on a smaller area, the "
-"improvement is less marked.  <<vinum-concat, Concatenated Organization>> "
-"illustrates the sequence in which storage units are allocated in a "
-"concatenated organization."
+"improvement is less marked.  crossref:vinum[vinum-concat, Concatenated "
+"Organization] illustrates the sequence in which storage units are allocated "
+"in a concatenated organization."
 msgstr ""
 
 #. type: Block title
@@ -206,9 +206,9 @@ msgid ""
 "misleading as it provides no redundancy.  Striping requires somewhat more "
 "effort to locate the data, and it can cause additional I/O load where a "
 "transfer is spread over multiple disks, but it can also provide a more "
-"constant load across the disks.  <<vinum-striped, Striped Organization>> "
-"illustrates the sequence in which storage units are allocated in a striped "
-"organization."
+"constant load across the disks.  crossref:vinum[vinum-striped, Striped "
+"Organization] illustrates the sequence in which storage units are allocated "
+"in a striped organization."
 msgstr ""
 
 #. type: Block title
@@ -441,8 +441,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/vinum/_index.adoc:192
 msgid ""
-"<<vinum-comparison, [.filename]#vinum# Plex Organizations>> summarizes the "
-"advantages and disadvantages of each plex organization."
+"crossref:vinum[vinum-comparison, [.filename]#vinum# Plex Organizations] "
+"summarizes the advantages and disadvantages of each plex organization."
 msgstr ""
 
 #. type: Block title
@@ -659,8 +659,8 @@ msgstr ""
 #: documentation/content/en/articles/vinum/_index.adoc:267
 msgid ""
 "This output shows the brief listing format of man:gvinum[8].  It is "
-"represented graphically in <<vinum-simple-vol, A Simple [.filename]#vinum# "
-"Volume>>."
+"represented graphically in crossref:vinum[vinum-simple-vol, A Simple [."
+"filename]#vinum# Volume]."
 msgstr ""
 
 #. type: Block title
@@ -776,8 +776,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/vinum/_index.adoc:323
 msgid ""
-"<<vinum-mirrored-vol, A Mirrored [.filename]#vinum# Volume>> shows the "
-"structure graphically."
+"crossref:vinum[vinum-mirrored-vol, A Mirrored [.filename]#vinum# Volume] "
+"shows the structure graphically."
 msgstr ""
 
 #. type: Block title
@@ -906,8 +906,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/vinum/_index.adoc:389
 msgid ""
-"This volume is represented in <<vinum-striped-vol, A Striped [."
-"filename]#vinum# Volume>>.  The darkness of the stripes indicates the "
+"This volume is represented in crossref:vinum[vinum-striped-vol, A Striped [."
+"filename]#vinum# Volume].  The darkness of the stripes indicates the "
 "position within the plex address space, where the lightest stripes come "
 "first and the darkest last."
 msgstr ""
@@ -957,8 +957,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/vinum/_index.adoc:416
 msgid ""
-"<<vinum-raid10-vol, A Mirrored, Striped [.filename]#vinum# Volume>> "
-"represents the structure of this volume."
+"crossref:vinum[vinum-raid10-vol, A Mirrored, Striped [.filename]#vinum# "
+"Volume] represents the structure of this volume."
 msgstr ""
 
 #. type: Block title
@@ -1519,44 +1519,44 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:677
+#: documentation/content/en/articles/vinum/_index.adoc:678
 msgid ""
 "It can be observed that the `size` parameter for the faked `a` partition "
 "matches the value outlined above, while the `offset` parameter is the sum of "
 "the offset within the [.filename]#vinum# partition `h`, and the offset of "
 "this partition within the device or slice.  This is a typical setup that is "
-"necessary to avoid the problem described in <<vinum-root-panic, Nothing "
-"Boots, the Bootstrap Panics>>.  The entire `a` partition is completely "
-"within the `h` partition containing all the [.filename]#vinum# data for this "
-"device."
+"necessary to avoid the problem described in crossref:vinum[vinum-root-panic, "
+"Nothing Boots, the Bootstrap Panics].  The entire `a` partition is "
+"completely within the `h` partition containing all the [.filename]#vinum# "
+"data for this device."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:679
+#: documentation/content/en/articles/vinum/_index.adoc:680
 msgid ""
 "In the above example, the entire device is dedicated to [.filename]#vinum# "
 "and there is no leftover pre-[.filename]#vinum# root partition."
 msgstr ""
 
 #. type: Title ===
-#: documentation/content/en/articles/vinum/_index.adoc:680
+#: documentation/content/en/articles/vinum/_index.adoc:681
 #, no-wrap
 msgid "Troubleshooting"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:683
+#: documentation/content/en/articles/vinum/_index.adoc:684
 msgid "The following list contains a few known pitfalls and solutions."
 msgstr ""
 
 #. type: Title ====
-#: documentation/content/en/articles/vinum/_index.adoc:684
+#: documentation/content/en/articles/vinum/_index.adoc:685
 #, no-wrap
 msgid "System Bootstrap Loads, but System Does Not Boot"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:688
+#: documentation/content/en/articles/vinum/_index.adoc:689
 msgid ""
 "If for any reason the system does not continue to boot, the bootstrap can be "
 "interrupted by pressing kbd:[space] at the 10-seconds warning.  The loader "
@@ -1565,14 +1565,14 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:690
+#: documentation/content/en/articles/vinum/_index.adoc:691
 msgid ""
 "If the [.filename]#vinum# kernel module was not yet in the list of modules "
 "to load automatically, type `load geom_vinum`."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:693
+#: documentation/content/en/articles/vinum/_index.adoc:694
 msgid ""
 "When ready, the boot process can be continued by typing `boot -as` which `-"
 "as` requests the kernel to ask for the root file system to mount (`-a`) and "
@@ -1583,7 +1583,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:699
+#: documentation/content/en/articles/vinum/_index.adoc:700
 msgid ""
 "At the prompt asking for a root file system to mount, any device that "
 "contains a valid root file system can be entered.  If [.filename]#/etc/"
@@ -1600,13 +1600,13 @@ msgid ""
 msgstr ""
 
 #. type: Title ====
-#: documentation/content/en/articles/vinum/_index.adoc:700
+#: documentation/content/en/articles/vinum/_index.adoc:701
 #, no-wrap
 msgid "Only Primary Bootstrap Loads"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:705
+#: documentation/content/en/articles/vinum/_index.adoc:706
 msgid ""
 "If [.filename]#/boot/loader# fails to load, but the primary bootstrap still "
 "loads (visible by a single dash in the left column of the screen right after "
@@ -1618,13 +1618,13 @@ msgid ""
 msgstr ""
 
 #. type: Title ====
-#: documentation/content/en/articles/vinum/_index.adoc:707
+#: documentation/content/en/articles/vinum/_index.adoc:708
 #, no-wrap
 msgid "Nothing Boots, the Bootstrap Panics"
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:713
+#: documentation/content/en/articles/vinum/_index.adoc:714
 msgid ""
 "This situation will happen if the bootstrap had been destroyed by the [."
 "filename]#vinum# installation.  Unfortunately, [.filename]#vinum# "
@@ -1637,7 +1637,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/articles/vinum/_index.adoc:716
+#: documentation/content/en/articles/vinum/_index.adoc:717
 msgid ""
 "Similarly, if the above situation has been recovered, by booting from a "
 "\"Fixit\" media, and the bootstrap has been re-installed using `bsdlabel -B` "
