--- a/documentation/content/en/books/arch-handbook/driverbasics/_index.po
+++ b/documentation/content/en/books/arch-handbook/driverbasics/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 09:20-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -142,25 +142,25 @@ msgid ""
 "static int\n"
 "skel_loader(struct module *m, int what, void *arg)\n"
 "{\n"
-"  int err = 0;\n"
+"\tint err = 0;\n"
 msgstr ""
 
 #. type: delimited block . 4
 #: documentation/content/en/books/arch-handbook/driverbasics/_index.adoc:108
 #, no-wrap
 msgid ""
-"  switch (what) {\n"
-"  case MOD_LOAD:                /* kldload */\n"
-"    uprintf(\"Skeleton KLD loaded.\\n\");\n"
-"    break;\n"
-"  case MOD_UNLOAD:\n"
-"    uprintf(\"Skeleton KLD unloaded.\\n\");\n"
-"    break;\n"
-"  default:\n"
-"    err = EOPNOTSUPP;\n"
-"    break;\n"
-"  }\n"
-"  return(err);\n"
+"\tswitch (what) {\n"
+"\tcase MOD_LOAD:                /* kldload */\n"
+"\t\tuprintf(\"Skeleton KLD loaded.\\n\");\n"
+"\t\tbreak;\n"
+"\tcase MOD_UNLOAD:\n"
+"\t\tuprintf(\"Skeleton KLD unloaded.\\n\");\n"
+"\t\tbreak;\n"
+"\tdefault:\n"
+"\t\terr = EOPNOTSUPP;\n"
+"\t\tbreak;\n"
+"\t}\n"
+"\treturn(err);\n"
 "}\n"
 msgstr ""
 
@@ -175,9 +175,9 @@ msgstr ""
 #, no-wrap
 msgid ""
 "static moduledata_t skel_mod = {\n"
-"  \"skel\",\n"
-"  skel_loader,\n"
-"  NULL\n"
+"\t\"skel\",\n"
+"\tskel_loader,\n"
+"\tNULL\n"
 "};\n"
 msgstr ""
 
