--- a/documentation/content/en/books/developers-handbook/x86/_index.po
+++ b/documentation/content/en/books/developers-handbook/x86/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-01-17 20:34-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1010,25 +1010,39 @@ msgid "We are now ready for our first program, the mandatory Hello, World!"
 msgstr ""
 
 #. type: delimited block . 4
+#: documentation/content/en/books/developers-handbook/x86/_index.adoc:545
+#, no-wrap
+msgid "\t%include\t'system.inc'\n"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/developers-handbook/x86/_index.adoc:549
+#, no-wrap
+msgid ""
+"\tsection\t.data\n"
+"\thello\tdb\t'Hello, World!', 0Ah\n"
+"\thbytes\tequ\t$-hello\n"
+msgstr ""
+
+#. type: delimited block . 4
+#: documentation/content/en/books/developers-handbook/x86/_index.adoc:557
+#, no-wrap
+msgid ""
+"\tsection\t.text\n"
+"\tglobal\t_start\n"
+"_start:\n"
+"\tpush\tdword hbytes\n"
+"\tpush\tdword hello\n"
+"\tpush\tdword stdout\n"
+"\tsys.write\n"
+msgstr ""
+
+#. type: delimited block . 4
 #: documentation/content/en/books/developers-handbook/x86/_index.adoc:560
 #, no-wrap
 msgid ""
-"1:\t%include\t'system.inc'\n"
-" 2:\n"
-" 3:\tsection\t.data\n"
-" 4:\thello\tdb\t'Hello, World!', 0Ah\n"
-" 5:\thbytes\tequ\t$-hello\n"
-" 6:\n"
-" 7:\tsection\t.text\n"
-" 8:\tglobal\t_start\n"
-" 9:\t_start:\n"
-"10:\tpush\tdword hbytes\n"
-"11:\tpush\tdword hello\n"
-"12:\tpush\tdword stdout\n"
-"13:\tsys.write\n"
-"14:\n"
-"15:\tpush\tdword 0\n"
-"16:\tsys.exit\n"
+"\tpush\tdword 0\n"
+"\tsys.exit\n"
 msgstr ""
 
 #. type: Plain text
@@ -1091,8 +1105,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/x86/_index.adoc:591
 msgid ""
-"Type the code (except the line numbers) in an editor, and save it in a file "
-"named [.filename]#hello.asm#.  You need nasm to assemble it."
+"Type the code in an editor, and save it in a file named [.filename]#hello."
+"asm#.  You need nasm to assemble it."
 msgstr ""
 
 #. type: Title ====
@@ -1787,8 +1801,8 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/x86/_index.adoc:1068
 msgid ""
 "This approach to buffered input/output still contains a hidden danger.  I "
-"will discuss-and fix-it later, when I talk about the <<x86-buffered-dark-"
-"side,dark side of buffering>>."
+"will discuss-and fix-it later, when I talk about the crossref:x86[x86-"
+"buffered-dark-side,dark side of buffering]."
 msgstr ""
 
 #. type: Title ===
@@ -1801,8 +1815,8 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/x86/_index.adoc:1077
 msgid ""
 "This may be a somewhat advanced topic, mostly of interest to programmers "
-"familiar with the theory of compilers.  If you wish, you may <<x86-command-"
-"line,skip to the next section>>, and perhaps read this later."
+"familiar with the theory of compilers.  If you wish, you may crossref:"
+"x86[x86-command-line,skip to the next section], and perhaps read this later."
 msgstr ""
 
 #. type: Plain text
