--- a/documentation/content/en/books/handbook/audit/_index.po
+++ b/documentation/content/en/books/handbook/audit/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-07-15 16:41-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -277,7 +277,8 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/audit/_index.adoc:130
-msgid "<<event-selection>> summarizes the default audit event classes:"
+msgid ""
+"crossref:audit[event-selection] summarizes the default audit event classes:"
 msgstr ""
 
 #. type: Block title
@@ -666,8 +667,8 @@ msgstr ""
 msgid ""
 "Each audit event class may be combined with a prefix indicating whether "
 "successful/failed operations are matched, and whether the entry is adding or "
-"removing matching for the class and type.  <<event-prefixes>> summarizes the "
-"available prefixes:"
+"removing matching for the class and type.  crossref:audit[event-prefixes] "
+"summarizes the available prefixes:"
 msgstr ""
 
 #. type: Block title
@@ -1170,15 +1171,15 @@ msgid "The change will take effect once [.filename]#/etc/crontab# is saved."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/audit/_index.adoc:439
+#: documentation/content/en/books/handbook/audit/_index.adoc:441
 msgid ""
 "Automatic rotation of the audit trail file based on file size is possible "
-"using `filesz` in [.filename]#audit_control# as described in <<audit-"
-"auditcontrol>>."
+"using `filesz` in [.filename]#audit_control# as described in crossref:"
+"audit[audit-auditcontrol]."
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/audit/_index.adoc:443
+#: documentation/content/en/books/handbook/audit/_index.adoc:445
 msgid ""
 "As audit trail files can become very large, it is often desirable to "
 "compress or otherwise archive trails once they have been closed by the audit "
@@ -1190,7 +1191,7 @@ msgid ""
 msgstr ""
 
 #. type: delimited block . 4
-#: documentation/content/en/books/handbook/audit/_index.adoc:452
+#: documentation/content/en/books/handbook/audit/_index.adoc:454
 #, no-wrap
 msgid ""
 "#\n"
@@ -1202,7 +1203,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: documentation/content/en/books/handbook/audit/_index.adoc:456
+#: documentation/content/en/books/handbook/audit/_index.adoc:458
 msgid ""
 "Other archiving activities might include copying trail files to a "
 "centralized server, deleting old trail files, or reducing the audit trail to "
