--- a/documentation/content/en/books/handbook/introduction/_index.po
+++ b/documentation/content/en/books/handbook/introduction/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-01-17 20:35-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -596,8 +596,8 @@ msgid ""
 "right directions.  Inviting dedicated and responsible developers to join our "
 "group of committers is one of the functions of the core team, as is the "
 "recruitment of new core team members as others move on.  The current core "
-"team was elected from a pool of committer candidates in May 2022.  Elections "
-"are held every 2 years."
+"team was elected from a pool of committer candidates in May and June 2024.  "
+"Elections are held every 2 years."
 msgstr ""
 
 #. type: delimited block = 4
