--- a/documentation/content/en/books/porters-handbook/new-port/_index.po
+++ b/documentation/content/en/books/porters-handbook/new-port/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 09:20-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,8 +43,8 @@ msgstr ""
 #: documentation/content/en/books/porters-handbook/new-port/_index.adoc:54
 msgid ""
 "What follows are some guidelines for creating a new port for FreeBSD.  To "
-"upgrade an existing port, read this, then read crossref:upgrading[preamble,"
-"Upgrading a Port]."
+"upgrade an existing port, read this, then read crossref:upgrading[port-"
+"upgrading,Upgrading a Port]."
 msgstr ""
 
 #. type: Plain text
