--- a/documentation/content/en/books/porters-handbook/pkg-files/_index.po
+++ b/documentation/content/en/books/porters-handbook/pkg-files/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-06-19 21:08-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -287,7 +287,8 @@ msgid ""
 "delimiter _must_ start just after `<<` symbols without any whitespace and it "
 "_must_ consist of capital letters only.  To finish a multiline string, add "
 "the delimiter string on a line of its own without any whitespace.  The "
-"message from <<porting-message-ucl-short-ex>> can be written as:"
+"message from crossref:pkg-files[porting-message-ucl-short-ex] can be written "
+"as:"
 msgstr ""
 
 #. type: delimited block . 4
