--- a/documentation/content/en/books/porters-handbook/upgrading/_index.po
+++ b/documentation/content/en/books/porters-handbook/upgrading/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-09-09 18:12-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -98,18 +98,18 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/porters-handbook/upgrading/_index.adoc:80
 msgid ""
-"Otherwise, either use the `git diff` method (<<git-diff>>) or copy the "
-"contents of the port to an entire different directory and use the result of "
-"the recursive man:diff[1] output of the new and old ports directories (for "
-"example, if the modified port directory is called [.filename]#superedit# and "
-"the original is in our tree as [.filename]#superedit.bak#, then save the "
-"result of `diff -ruN superedit.bak superedit`).  Either unified or context "
-"diff is fine, but port committers generally prefer unified diffs.  Note the "
-"use of the `-N` option-this is the accepted way to force diff to properly "
-"deal with the case of new files being added or old files being deleted.  "
-"Before sending us the diff, please examine the output to make sure all the "
-"changes make sense.  (In particular, make sure to first clean out the work "
-"directories with `make clean`)."
+"Otherwise, either use the `git diff` method (crossref:upgrading[git-diff]) "
+"or copy the contents of the port to an entire different directory and use "
+"the result of the recursive man:diff[1] output of the new and old ports "
+"directories (for example, if the modified port directory is called [."
+"filename]#superedit# and the original is in our tree as [."
+"filename]#superedit.bak#, then save the result of `diff -ruN superedit.bak "
+"superedit`).  Either unified or context diff is fine, but port committers "
+"generally prefer unified diffs.  Note the use of the `-N` option-this is the "
+"accepted way to force diff to properly deal with the case of new files being "
+"added or old files being deleted.  Before sending us the diff, please "
+"examine the output to make sure all the changes make sense.  (In particular, "
+"make sure to first clean out the work directories with `make clean`)."
 msgstr ""
 
 #. type: delimited block = 4
