--- a/documentation/content/en/articles/gjournal-desktop/_index.po
+++ b/documentation/content/en/articles/gjournal-desktop/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 10:28-0300\n"
+"POT-Creation-Date: 2024-09-14 15:00-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -805,7 +805,7 @@ msgid ""
 "(flushed) to disk.  Keep in mind the size of the journal depends on the "
 "usage load, and not the size of the data provider.  If your disk activity is "
 "high, you need a larger partition for the journal.  See the note in the "
-"<<understanding-journaling>> section."
+"crossref:gjournal-desktop[understanding-journaling] section."
 msgstr ""
 
 #. type: Title ===
