--- a/documentation/content/en/books/faq/_index.po
+++ b/documentation/content/en/books/faq/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-01-17 20:35-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -177,7 +177,7 @@ msgstr ""
 msgid ""
 "The key decisions concerning the FreeBSD project, such as the overall "
 "direction of the project or who is allowed to add code to the source tree, "
-"are made by a elected Core Team of 9 people."
+"are made by an elected Core Team of nine people."
 msgstr ""
 
 #. type: Plain text
@@ -1334,7 +1334,7 @@ msgstr ""
 #. type: Title ===
 #: documentation/content/en/books/faq/_index.adoc:550
 #, no-wrap
-msgid "Where does data written to/dev/null go?"
+msgid "Where does data written to /dev/null go?"
 msgstr ""
 
 #. type: Plain text
