--- a/documentation/content/en/books/handbook/linuxemu/_index.po
+++ b/documentation/content/en/books/handbook/linuxemu/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-01-17 20:35-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -118,7 +118,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/linuxemu/_index.adoc:82
 msgid ""
-"Once enabled, it can be started without rebooting executing the following "
+"Once enabled, it can be started without rebooting by executing the following "
 "command:"
 msgstr ""
 
