--- a/documentation/content/en/books/handbook/mac/_index.po
+++ b/documentation/content/en/books/handbook/mac/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-07-15 16:41-0300\n"
+"POT-Creation-Date: 2024-09-14 14:59-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -380,7 +380,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/mac/_index.adoc:154
 msgid ""
 "Some users have experienced problems with setting the `multilabel` flag on "
-"the root partition.  If this is the case, please review <<mac-troubleshoot>>."
+"the root partition.  If this is the case, please review crossref:mac[mac-"
+"troubleshoot]."
 msgstr ""
 
 #. type: Plain text
