--- a/website/content/en/portmgr/policies_eol.adoc
+++ b/website/content/en/portmgr/policies_eol.adoc
@@ -49,7 +49,19 @@ The _Estimated EoL (end-of-life)_ column gives the earliest date on which that b
 * FreeBSD:13:powerpc64 (only quarterly is updated)
 * FreeBSD:13:powerpc64le (only quarterly is updated)
 
-|13.4-RELEASE + 3 months
+|December 31, 2024
+
+|releng/13.4 |13.4-RELEASE |releng/13.4 a|
+* FreeBSD:13:aarch64
+* FreeBSD:13:amd64
+* FreeBSD:13:armv6
+* FreeBSD:13:armv7
+* FreeBSD:13:i386
+* FreeBSD:13:powerpc (only quarterly is updated)
+* FreeBSD:13:powerpc64 (only quarterly is updated)
+* FreeBSD:13:powerpc64le (only quarterly is updated)
+
+|June 30, 2025
 
 |stable/14 |n/a |releng/14.0 | |November 30, 2028
 |releng/14.0 |14.0-RELEASE |releng/14.0 a|
