--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -43,7 +43,7 @@ General discussions about the pending release and known issues should be sent to
 |RELEASE builds begin |[.line-through]*30 August 2024* +
 13 September 2024 |13 September 2024 |{localRel}-RELEASE builds begin.
 |RELEASE announcement |[.line-through]*3 September 2024* +
-17 September 2024 |- |{localRel}-RELEASE press release.
+17 September 2024 |17 September 2024 |{localRel}-RELEASE press release.
 |===
 
 "*" indicates "as-needed" items.
