--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -34,6 +34,7 @@ For information about branches, release dates, and estimated end-of-life (EOL) d
 Production:
 
 * *Release {rel133-current}* ({rel133-current-date}) _link:{u-rel133-announce}[Announcement] : link:{u-rel133-notes}[Release Notes] : link:{u-rel133-installation}[Installation Instructions] : link:{u-rel133-hardware}[Hardware Compatibility List] : link:{u-rel133-readme}[Readme] : link:{u-rel133-errata}[Errata] : link:{u-rel133-signatures}[Signed Checksums]_
+* *Release {rel134-current}* ({rel134-current-date}) _link:{u-rel134-announce}[Announcement] : link:{u-rel134-notes}[Release Notes] : link:{u-rel134-installation}[Installation Instructions] : link:{u-rel134-hardware}[Hardware Compatibility List] : link:{u-rel134-readme}[Readme] : link:{u-rel134-errata}[Errata] : link:{u-rel134-signatures}[Signed Checksums]_
 * *Release {rel140-current}* ({rel140-current-date}) _link:{u-rel140-announce}[Announcement] : link:{u-rel140-notes}[Release Notes] : link:{u-rel140-installation}[Installation Instructions] : link:{u-rel140-hardware}[Hardware Compatibility List] : link:{u-rel140-readme}[Readme] : link:{u-rel140-errata}[Errata] : link:{u-rel140-signatures}[Signed Checksums]_
 * *Release {rel141-current}* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
 
